small changes friday

--- a/FinalProject/Shopplist/templates/Shopplist/index.html
+++ b/FinalProject/Shopplist/templates/Shopplist/index.html
@@ -14,7 +14,7 @@
     <div id="all-items-view">
 
         <div id="alert-holder">
-            <div id="alert" class="alert alert-success" role="alert">dsfsdf</div>
+            <div id="item-alert" role="alert">dsfsdf</div>
         </div>
 
         <form>
