pre alerter refactoring

--- a/FinalProject/Shopplist/templates/Shopplist/index.html
+++ b/FinalProject/Shopplist/templates/Shopplist/index.html
@@ -25,8 +25,18 @@
         </form>
 
         <h3 style="margin-top:30px;">All Items</h3>
-
-
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Item Name</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Aisle</th>
+                    <th scope="col">On List</th>
+                </tr>
+            </thead>
+            <tbody id="items-list">
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock %}
