--- a/FinalProject/Shopplist/static/Shopplist/styles.css
+++ b/FinalProject/Shopplist/static/Shopplist/styles.css
@@ -5,3 +5,10 @@
 #site-body {
     margin: 10px;
 }
+
+
+.item-holder {
+    margin: 10px 10px;
+    padding: 10px 10px;
+    border: 1px solid red;
+}
