all and active mostly set up...next up filtering

--- a/FinalProject/Shopplist/templates/Shopplist/index.html
+++ b/FinalProject/Shopplist/templates/Shopplist/index.html
@@ -9,6 +9,18 @@
 <div id="site-body">
     <div id="active-view">
         <h3>Active Items</h3>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Checked</th>
+                    <th scope="col">Item Name</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Aisle</th>
+                </tr>
+            </thead>
+            <tbody id="active-items-list">
+            </tbody>
+        </table>
     </div>
 
     <div id="all-items-view">
@@ -34,7 +46,7 @@
                     <th scope="col">On List</th>
                 </tr>
             </thead>
-            <tbody id="items-list">
+            <tbody id="all-items-list">
             </tbody>
         </table>
     </div>
