--- a/FinalProject/Shopplist/templates/Shopplist/layout.html
+++ b/FinalProject/Shopplist/templates/Shopplist/layout.html
@@ -11,9 +11,13 @@
         {% block script %}
         {% endblock %}
     </head>
-    <body>
+    <body {% if darkmode %} class="dark-mode" {% endif %}>
 
+        {% if darkmode %} 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        {% else %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        {% endif %}
             <a class="navbar-brand" href="{% url 'index' %}">Shopplist</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,9 +25,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" name="active-list">Active List</a>
                         </li>
