--- a/FinalProject/Shopplist/templates/Shopplist/register.html
+++ b/FinalProject/Shopplist/templates/Shopplist/register.html
@@ -24,7 +24,6 @@
         </div>
         <input class="btn btn-primary" type="submit" value="Register">
     </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    <span style="margin-left:10px;">Already have an account? <a href="{% url 'login' %}">Log In here.</a></span>
 
 {% endblock %}
